# Brain-Tumour-Detection

./: README.md  evaluate.py  pyproject.toml  train_pytorch.py  train_tensorflow.py
checkpoints/: CustomCNN_best.pt  UNET_best.pt  VAF_best.pt
logs/: CustomCNN.csv  ResNet50.csv  ResNet50_finetuned.csv  UNET.csv  VAF.csv
tensorboard_eval/CustomCNN/: events.out.tfevents.1770484335.MSI.14096.2
tensorboard_eval/ResNet50/: events.out.tfevents.1770484383.MSI.14096.3
tensorboard_eval/ResNet50_finetuned/: events.out.tfevents.1770484476.MSI.14096.4
tensorboard_eval/UNET/: events.out.tfevents.1770484205.MSI.14096.1
tensorboard_eval/VAF/: events.out.tfevents.1770483132.MSI.30472.0  events.out.tfevents.1770484096.MSI.14096.0
trained_models/: CustomCNN.pt  UNET.pt  VAF.pt
